--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch:server": "nodemon server.js --ignore client/"
   },
   "author": "Brandon Villagran",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "onoff": "^3.2.2",
     "serve-static": "^1.13.2",
